--- a/static/common/css/common.css
+++ b/static/common/css/common.css
@@ -79,13 +79,25 @@
     /* margin-right: 30px; */
     /* width: 90px; */
 }
-.header .header-right .head-mess {
+
+.header .header-right .head-mess-some {
     /* float: left; */
     border-radius: 15px;
     width: 90px;
     text-align: center;
     background-color: #fff;
     height: 130px;
+    display: none;
+    margin-right: 28px;
+    margin-top: 48px;
+}
+
+.header .header-right .head-mess-sub {
+    border-radius: 15px;
+    width: 90px;
+    text-align: center;
+    background-color: #fff;
+    height: 75px;
     display: none;
     margin-right: 28px;
     margin-top: 48px;
@@ -223,4 +235,82 @@
     width: 100%;
     height: 800px;
     background-color: #ED7D31;
+}
+
+/* 登录注册相关展示 */
+#bgsub {
+    width: 100%;
+    height: 100%;
+    background-color: burlywood;
+    opacity: 0.8;
+    z-index: 999;
+    left: 0%;
+    top: 0%;
+    position: fixed;
+    /* display: none; */
+}
+
+#bgsub .sub-index {
+    position: absolute;
+    width: 366px;
+    height: 290px;
+    background-color: #fff;
+    left: 50%;
+    top: 50%;
+    margin-left: -200px;
+    margin-top: -200px;
+    border-radius: 50px;
+}
+
+#bgsub .sub-index .sub-head {
+    width: 98px;
+    margin-left: 150px;
+    margin-top: 10px;
+    font-size: 20px;
+    font-weight: bold;
+    color: midnightblue;
+}
+
+#bgsub .sub-index .sub-mid {
+    margin-left: 88px;
+    margin-top: 40px;
+    font-size: 18px;
+    color: saddlebrown;
+}
+#bgsub .sub-index .sub-mid p {
+    margin-top: 20px;
+}
+#bgsub .sub-index .sub-mid .inputsub {
+    width: 180px;
+    height: 25px;
+    background: #10101000;
+    border: 1px solid #5f4242;
+    border-radius: 7px;
+    outline:0;
+}
+#bgsub .sub-index .sub-bottom {
+    /* width: 220px; */
+    text-align: center;
+    margin-top: 30px;
+    /* margin-left: 88px; */
+}
+#bgsub .sub-index .sub-bottom .submitgo {
+    border-radius: 25px;
+    background-color: #05D9A9;
+    font-size: 15px;
+    box-shadow: 3px 5px 5px #888888;
+    height: 35px;
+    line-height: 35px;
+    cursor: pointer;
+    width: 150px;
+    margin: 10px auto;
+}
+#bgsub .sub-index .sub-bottom .submitgo:hover {
+    background-color: #2C95CF;
+}
+#bgsub .sub-index .sub-bottom .submitfog {
+    margin-top: 15px;
+    margin: 10px auto 0px;
+    font-size: 12px;
+    cursor: pointer;
 }
