--- a/static/pagination.css
+++ b/static/pagination.css
@@ -46,7 +46,7 @@
     height: 38px;
     line-height: 38px;
     background: #fff;
-    border: 1px solid #ebebeb;
+    border: 1px solid #c9c3c3;
     color: #bdbdbd;
     font-size: 14px;
 }
