--- a/static/home/css/index.css
+++ b/static/home/css/index.css
@@ -1,6 +1,6 @@
 #mid {
     width: 100%;
-    height: 860px;
+    height: 900px;
 }
 
 /* 主页内容左边部分 */
@@ -11,9 +11,20 @@
 }
 
 #mid .content .con-left {
-    height: 800px;
+    height: 820px;
 }
-
+#mid .content .con-left-duo .con-left-title{
+    height: 30px;
+    margin-top: 10px;
+    text-align: left;
+}
+#mid .content .con-left-duo .con-left-title span {
+    color: #E0B293;
+    cursor: pointer;
+}
+#mid .content .con-left-duo .con-left-title span:first-child {
+    display: none;
+}
 #mid .content .con-left .con-left-con {
     margin: 5px 10px;
     float: left;
