--- a/static/home/css/index.css
+++ b/static/home/css/index.css
@@ -93,42 +93,23 @@
     height: 850px;
 }
 
-#mid .content .con-right .con-right-edit {
+#mid .content .con-right .con-right-my {
     background-color: #F0F1F2;
     width: 100%;
-    height: 219px;
+    height: 238px;;
     margin-top: 10px;
     border-radius: 20px;
     opacity: 0.8;
 }
-
-#mid .content .con-right .con-right-edit .inputmind {
-    margin-top: 10px;
-    width: 260px;
-    height: 150px;
-    border-radius: 5px;
+#mid .content .con-right .con-right-my .my-some-title {
+    text-align: left;
+    padding-left: 10px;
+    padding-top: 10px;
 }
-
-#mid .content .con-right .con-right-edit .pubtext {
-    width: 70px;
-    height: 40px;
-    border-radius: 50%;
-    font-size: 18px;
-    background-color: #ED7D31;
-    margin-top: 10px;
-    margin-left: 10px;
-    line-height: 40px;
-    cursor: pointer;
-}
-
-#mid .content .con-right .con-right-edit .pubtext:hover {
-    background-color: #F9CC9D;
-}
-
 #mid .content .con-right .con-right-con .con-right-css {
     background-color: #F0F1F2;
     width: 100%;
-    height: 300px;
+    height: 310px;
     margin-top: 10px;
     border-radius: 20px;
     text-align: left;
@@ -142,6 +123,7 @@
 
 #mid .content .con-right .con-right-con .con-right-css .con-right-all .con-right-nr {
     padding-left: 20px;
+    height: 230px;
 }
 
 #mid .content .con-right .con-right-con .con-right-css .con-right-all .con-right-nr p {
@@ -185,4 +167,18 @@
 .m-style {
     margin-top: 10px;
     margin-right: 13px;
+}
+
+/* 最新里面的分页重写 */
+.m-style-right a{
+    width: 20px;
+    height: 20px;
+    line-height: 20px;
+    border-radius: 6px;
+}
+.m-style-right .active{
+    width: 20px;
+    height: 20px;
+    line-height: 20px;
+    border-radius: 6px;
 }
