--- a/static/home/css/all.css
+++ b/static/home/css/all.css
@@ -110,3 +110,51 @@
     margin: 10px 10px 10px 0px;
     border-radius: 5px;
 }
+
+/* tj.html的样式 */
+#abox .amid .amid-right .tjshouye .tj-top{
+    width: 98%;
+    height: 139px;
+    margin: 5px auto;
+    border-radius: 5px;
+    /* background-color: #503636; */
+    box-shadow: 1px 1px 1px #888888;
+}
+#abox .amid .amid-right .tjshouye .tj-top .tj-top-title {
+    width: 130px;
+    /* height: 100px; */
+    /* background-color: #243468; */
+    font-size: 20px;
+    font-weight: 600;
+    color: #97b9ae;
+}
+#abox .amid .amid-right .tjshouye .tj-top .tj-top-ls {
+    /* width: 100px; */
+    /* height: 100px; */
+    /* background-color: #481153; */
+}
+#abox .amid .amid-right .tjshouye .tj-top .tj-top-ls li {
+    width: 20%;
+    height: 75px;
+    background-color: #d7dcde80;
+    float: left;
+    margin-left: 85px;
+    line-height: 75px;
+    font-size: 28px;
+    text-align: center;
+    border-radius: 25px;
+    margin-top: 10px;
+    box-shadow: 5px 5px 5px #888888;
+}
+#abox .amid .amid-right .tjshouye .tj-mid {
+    width: 100px;
+    height: 200px;
+    background-color: #2e5f6e;
+}
+#abox .amid .amid-right .tjshouye .tj-foot {
+    width: 100px;
+    height: 200px;
+    background-color: #6e3a75;
+}
+
+/* 个人资料相关的css */
