--- a/static/common/css/common.css
+++ b/static/common/css/common.css
@@ -386,7 +386,7 @@
 
 #bgdet .det-index .det-mid .det-mid-left .det-mid-text {
     /* background-color: azure; */
-    width: 600px;
+    width: 590px;
     height: 250px;
     border-radius: 10px;
     margin-left: 10px;
@@ -401,7 +401,7 @@
 }
 
 #bgdet .det-index .det-mid .det-mid-left .det-mid-comment #text-comments {
-    width: 600px;
+    width: 575px;
     height: 95px;
     border-radius: 10px;
     margin-left: 10px;
@@ -435,26 +435,63 @@
     box-shadow: 1px 1px 1px rgb(131, 126, 126);
     overflow: auto;
 }
+
 /* #bgdet .det-index .det-mid .det-mid-right{
     width: 200px;
     height: 30px;
     background-color: #ED7D31;
     
 } */
-#bgdet .det-index .det-mid .det-mid-right .det-mid-right-comments  {
-    width: 280px;
+#bgdet .det-index .det-mid .det-mid-right .det-mid-right-comments {
+    width: 250px;
     /* height: 30px; */
     margin: 10px 5px;
-    background-color: #ED7D31;
+    background-color: #da600e29;
     border-radius: 5px;
     padding: 2px 2px;
+    font-size: 14px;
 }
+
 #bgdet .det-index .det-mid .det-mid-right .det-mid-right-comments .comment-comment {
+    width: 100%;
+    word-break: break-all;
+    word-wrap: break-word;
     margin-left: 10px;
 }
-#bgdet .det-index .det-mid .det-mid-right .det-mid-right-comments .comment-replys {
+/* 评论显示点赞回复和删除 */
+#bgdet .det-index .det-mid .det-mid-right .det-mid-right-comments .comment-san {
+    margin-top: 5px;
+    width: 200px;
     margin-left: 20px;
 }
+#bgdet .det-index .det-mid .det-mid-right .det-mid-right-comments .comment-san .comsan-like {
+    cursor: pointer;
+    color: #5f5f5f;
+}
+#bgdet .det-index .det-mid .det-mid-right .det-mid-right-comments .comment-san .comsan-reply {
+    cursor: pointer;
+    margin-left: 10px;
+    color: #5f5f5f;
+}
+#bgdet .det-index .det-mid .det-mid-right .det-mid-right-comments .comment-san .comsan-del {
+    cursor: pointer;
+    margin-left: 10px;
+    color: #5f5f5f;
+}
+
+
+
+/* 评论回复 */
+#bgdet .det-index .det-mid .det-mid-right .det-mid-right-comments .comment-replys {
+    width: 100%;
+    word-break: break-all;
+    word-wrap: break-word;
+    margin-left: 20px;
+}
+
 #bgdet .det-index .det-mid .det-mid-right .det-mid-right-comments .comment-replys .comment-reply-text {
+    width: 190px;
+    word-break: break-all;
+    word-wrap: break-word;
     margin-left: 24px;
 }
