--- a/static/home/css/index.css
+++ b/static/home/css/index.css
@@ -193,6 +193,19 @@
     background-color: #E0B293;
 }
 
+#bgdet .det-index .det-mid .det-mid-right .det-mid-right-comments .comment-replys .arreplyshowmore {
+    width: 150px;
+    height: 30px;
+    margin: 20px auto;
+    text-align: center;
+    background-color: #F0F8FF;
+    margin-top: 10px;
+    line-height: 30px;
+    border-radius: 10px;
+    box-shadow: 1px 1px 1px rgb(131, 126, 126);
+    cursor: pointer;
+}
+
 /* 分页的样式--重写 */
 .m-style .active {
     border-radius: 10px;
